# python-apps

./: CONTRIBUTING.md  README.md
.github/workflows/: my-shell-docker-build.yml  my-shell-pull-request.yml  my-shell-release.yml  my-shell-test-and-deploy.yml
my_shell/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
my_shell/app/: main.py
my_shell/app/dependencies/: auth.py
my_shell/app/routers/: user.py
my_shell/app/schemas/: user.py
my_shell/cli/: main.py
my_shell/tests/: test_main.py  test_user.py
tools/python_fastapi_app/: 01-generate-app-base.py  02-commit-app-base.py  03-github-actions-workflows.py  04-commit-github-actions-workflows.py
