[tool.poetry]
name = "my_shell"
version = "0.1.0"
description = "A fastapi driven, pydantic formed, custom shell application with http API"
authors = ["Brain-X <github@brain-x.io>"]

packages = [
    { include = "app" },
    { include = "cli" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.3"
click = "^8.1.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
my-shell = "cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
